@@ -1,3 +1,10 @@
+
+
+2008-11-21 Roman
+- /UI/VCAEngine: Group request for widget's tree is made time optimal for session mode.
+- !:/UI/VCAEngine: Added not full group request's for libraries of widget's tree and projects tree.
+
+
 2008-11-20 Maxim
 - FIX:/UI/Vision: procedure dynamic if fixed for primitive ElFigure.
 - FIX:/UI/WebVision: filling the simple arc is modified for primitive ElFigure.
